upgrade:: service_workforce add get shift for self
