# server/service_workforce/internal/interfaces/http/router/router.go
@@ -19,14 +19,18 @@ func (r *HttpRouterManager) InitRoutes(group *gin.RouterGroup) {
 	shiftRouterV1 := group.Group("/v1/shift")
 	shiftRouterV1.Use(infraMiddleware.GetAuthAdminAccessTokenJwtMiddleware().Apply())
 	{
-		shiftRouterV1.GET("", handler.NewHandler().GetListShift)              // Lay danh sach ca lam viec
+		shiftRouterV1.GET("", handler.NewHandler().GetListShift) // Lay danh sach ca lam viec
 		shiftRouterV1.POST("", handler.NewHandler().CreateShift)              // Tao ca lam viec
 		shiftRouterV1.GET("/:id", handler.NewHandler().GetDetailShift)        // Xem chi tiet thong tin ca lam viec
 		shiftRouterV1.POST("/edit", handler.NewHandler().EditShift)           // Chinh sua ca lam viec
 		shiftRouterV1.DELETE("/:id", handler.NewHandler().DeleteShift)        // Xoa ca lam viec
 		shiftRouterV1.POST("/status", handler.NewHandler().ChangeStatusShift) // Thay doi trang thai ca lam viec
 	}
-
+	shiftRouterV1Employee := group.Group("/v1/shift")
+	shiftRouterV1Employee.Use(infraMiddleware.GetAuthAccessTokenJwtMiddleware().Apply())
+	{
+		shiftRouterV1Employee.GET("/employee", handler.NewHandler().GetListShiftEmployee) // Lay danh sach ca lam viec nhan vien
+	}
 	shiftEmployeeRouterV1 := group.Group("/v1/employee/shift")
 	shiftEmployeeRouterV1.Use(infraMiddleware.GetAuthAdminAccessTokenJwtMiddleware().Apply())
 	{
